fix the chart and user table to responsive on mobile

--- a/src/app/charts/donut-chart/donut-chart.scss
+++ b/src/app/charts/donut-chart/donut-chart.scss
@@ -15,6 +15,7 @@
 @media (max-width: 428px) {
     .donut-box {
         width: 100%;
-        margin: 10px 0;
+        max-width: 100%;
+        margin: 0;
     }
 }
